hasqd/tests/errors/oleg_01/a.bat
::start ..\..\..\src\_bin_msc\hasqd db=db-1401 dprn=1 dsvt=1 quit=1 lock=1 p=14001
::start ..\..\..\src\_bin_msc\hasqd db=db-1402 dprn=1 dsvt=1 quit=1 lock=1 p=14002
::start ..\..\..\src\_bin_msc\hasqd db=db-1403 dprn=1 dsvt=1 quit=1 lock=1 p=14003
::start ..\..\..\src\_bin_msc\hasqd db=db-1404 dprn=1 dsvt=1 quit=1 lock=1 p=14004
::start ..\..\..\src\_bin_msc\hasqd db=db-1405 dprn=1 dsvt=1 quit=1 lock=1 p=14005
::start ..\..\..\src\_bin_msc\hasqd db=db-1406 dprn=1 dsvt=1 quit=1 lock=1 p=14006

start ..\..\..\src\_bin_msc\hasqd db=db-1400 dprn=1 dsvt=1 quit=1 lock=1 p=14000 s=reorg-confl-cop.inp net_conntime=1000 net_readtime=1000

